ldms/src/core/ldms.h

typedef struct ldms_xprt *ldms_t;
typedef struct ldms_set *ldms_set_t;
int ldms_init(size_t max_size);
#define ldms_xprt_put(_x_, _n_) _ldms_xprt_put((_x_), (_n_), __func__, __LINE__)
enum ldms_lookup_status {
	LDMS_LOOKUP_ERROR = 1,
	LDMS_LOOKUP_OK = 0,
	LDMS_LOOKUP_NOTIFY = 1,
};
typedef void (*ldms_lookup_cb_t)(ldms_t t, enum ldms_lookup_status status,
				 int more, ldms_set_t s, void *arg);
typedef void (*ldms_log_fn_t)(ovis_log_t subsys, int level, const char *fmt, ...);
ldms_t ldms_xprt_new_with_auth(const char *xprt_name,
			       const char *auth_name,
			       struct attr_value_list *auth_av_list);
enum ldms_xprt_event_type {
	LDMS_XPRT_EVENT_CONNECTED,
	LDMS_XPRT_EVENT_REJECTED,
	LDMS_XPRT_EVENT_ERROR,
	LDMS_XPRT_EVENT_DISCONNECTED,
	LDMS_XPRT_EVENT_RECV,
	LDMS_XPRT_EVENT_SET_DELETE,
	LDMS_XPRT_EVENT_SEND_COMPLETE,
	LDMS_XPRT_EVENT_SEND_QUOTA_DEPOSITED,
	LDMS_XPRT_EVENT_QGROUP_ASK,
	LDMS_XPRT_EVENT_QGROUP_DONATE,
	LDMS_XPRT_EVENT_QGROUP_DONATE_BACK,
	LDMS_XPRT_EVENT_LAST
};
struct ldms_xprt_set_delete_data {
	ldms_set_t set;		
	const char *name;	
};
struct ldms_xprt_quota_event_data {
	uint64_t quota; 
	int      ep_idx; 
	int      rc; 
};
typedef struct ldms_xprt_event {
	enum ldms_xprt_event_type type;
	union {
		char *data;
		struct ldms_xprt_set_delete_data set_delete;
		struct ldms_xprt_quota_event_data quota;
	};
	size_t data_len;
} *ldms_xprt_event_t;
typedef void (*ldms_event_cb_t)(ldms_t x, ldms_xprt_event_t e, void *cb_arg);
int ldms_xprt_connect_by_name(ldms_t x, const char *host, const char *port,
			      ldms_event_cb_t cb, void *cb_arg);
extern int ldms_xprt_listen_by_name(ldms_t x, const char *host, const char *port,
		ldms_event_cb_t cb, void *cb_arg);
extern void ldms_xprt_close(ldms_t x);
extern int ldms_xprt_send(ldms_t x, char *msg_buf, size_t msg_len);
size_t ldms_xprt_msg_max(ldms_t x);
enum ldms_dir_type {
	LDMS_DIR_LIST,		
	LDMS_DIR_DEL,		
	LDMS_DIR_ADD,		
	LDMS_DIR_UPD,		
};
typedef struct ldms_key_value_s {
	char *key;
	char *value;
} *ldms_key_value_t;
typedef struct ldms_dir_set_s {
	char *inst_name;	
	char *schema_name;	
	char *digest_str;	
	char *flags;		
	size_t meta_size;	
	size_t data_size;	
	size_t heap_size;	
	uid_t uid;		
	gid_t gid;		
	char *perm;		
	int card;		
	int array_card;		
	uint64_t meta_gn;	
	uint64_t data_gn;	
	struct ldms_timestamp timestamp; 
	struct ldms_timestamp duration;	 
	size_t info_count;
	ldms_key_value_t info;
} *ldms_dir_set_t;
typedef struct ldms_dir_s {
	enum ldms_dir_type type;
	int more;
	int set_count;
	struct ldms_dir_set_s set_data[OVIS_FLEX];
} *ldms_dir_t;
typedef void (*ldms_dir_cb_t)(ldms_t t, int status, ldms_dir_t dir, void *cb_arg);
void ldms_xprt_dir_free(ldms_t t, ldms_dir_t dir);
#define LDMS_DIR_F_NOTIFY	1
extern int ldms_xprt_dir(ldms_t x, ldms_dir_cb_t cb, void *cb_arg, uint32_t flags);
enum ldms_lookup_flags {
	LDMS_LOOKUP_BY_INSTANCE = 0,
	LDMS_LOOKUP_BY_SCHEMA = 1,
	LDMS_LOOKUP_RE = 2,
	LDMS_LOOKUP_SET_INFO = 4,
};
extern int ldms_xprt_lookup(ldms_t t, const char *name, enum ldms_lookup_flags flags,
		       ldms_lookup_cb_t cb, void *cb_arg);
void ldms_set_put(ldms_set_t s);
extern const char *ldms_set_schema_name_get(ldms_set_t s);
extern const char *ldms_set_instance_name_get(ldms_set_t s);
extern const char *ldms_set_producer_name_get(ldms_set_t s);
extern int ldms_set_producer_name_set(ldms_set_t s, const char *name);
extern const char *ldms_set_name_get(ldms_set_t s);
extern uint32_t ldms_set_card_get(ldms_set_t s);
uint32_t ldms_set_uid_get(ldms_set_t s);
uint32_t ldms_set_gid_get(ldms_set_t s);
uint32_t ldms_set_perm_get(ldms_set_t s);
extern uint32_t ldms_set_meta_sz_get(ldms_set_t s);
extern uint32_t ldms_set_data_sz_get(ldms_set_t s);
extern ldms_set_t ldms_set_by_name(const char *set_name);
uint64_t ldms_set_meta_gn_get(ldms_set_t s);
uint64_t ldms_set_data_gn_get(ldms_set_t s);
extern int ldms_transaction_begin(ldms_set_t s);
extern int ldms_transaction_end(ldms_set_t s);
extern struct ldms_timestamp ldms_transaction_timestamp_get(ldms_set_t s);
extern struct ldms_timestamp ldms_transaction_duration_get(ldms_set_t s);
extern int ldms_set_is_consistent(ldms_set_t s);