ldms/src/core/ldms_core.h

struct ldms_timestamp  {
	uint32_t sec;
	uint32_t usec;
};