lib/src/ovis_util/util.h


struct attr_value {
	char *name;
	char *value;
};
typedef struct string_ref_s {
	char *str;
	LIST_ENTRY(string_ref_s) entry;
}
typedef struct attr_value_list {
	int size; 
	int count; 
	LIST_HEAD(string_list, string_ref_s) strings;
	struct attr_value list[OVIS_FLEX];
} *av_list_t;
int tokenize(char *cmd, struct attr_value_list *kwl,
	     struct attr_value_list *avl);
struct attr_value_list *av_new(size_t size);
int av_add(struct attr_value_list *avl, const char *name, const char *value);
void av_free(struct attr_value_list *avl);